Uploaded image for project: 'Apache HAWQ'
  1. Apache HAWQ
  2. HAWQ-1052

Select from PXF/ORC table fails for boolean datatype

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • None
    • 2.1.0.0-incubating
    • PXF
    • None

    Description

      \d pxf_hive_orc_types
          External table "public.pxf_hive_orc_types"
       Column |            Type             | Modifiers 
      --------+-----------------------------+-----------
       t1     | text                        | 
       t2     | text                        | 
       num1   | integer                     | 
       dub1   | double precision            | 
       dec1   | numeric                     | 
       tm     | timestamp without time zone | 
       r      | real                        | 
       bg     | bigint                      | 
       b      | boolean                     | 
       tn     | smallint                    | 
       sml    | smallint                    | 
       dt     | date                        | 
       vc1    | character varying(5)        | 
       c1     | character(3)                | 
       bin    | bytea                       | 
      Type: readable
      Encoding: UTF8
      Format type: custom
      Format options: formatter 'pxfwritable_import' 
      External location: pxf://localhost:51200/hive_orc_all_types?PROFILE=HiveORC&delimiter=^A
      

      Query fails if condition applied to boolean column:

      SELECT t1, b FROM pxf_hive_orc_types WHERE b is true;
      ERROR:  extractPxfAttributes: unsupported node tag 330, unable to extract attribute from qualifier (pxffilters.c:665)  (seg4 localhost:40000 pid=73027)
      DETAIL:  External table pxf_hive_orc_types
      

      Attachments

        Issue Links

          Activity

            People

              odiachenko Oleksandr Diachenko
              odiachenko Oleksandr Diachenko
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: