HAWQ-1052. Fixed extraction logic for boolean datatype.